Fix issue with collapsing margin
Because there was nothing to separate the container from the nutrition section the margin on the nutrition section was collapsing. Adding the 1px of padding adds the separation and means the margins no longer collapse.

--- a/styles/saas/styles.scss
+++ b/styles/saas/styles.scss
@@ -29,6 +29,7 @@ ul, ol {
     max-width: 375px;
     margin: 0 auto;
     background-color: $white-color;
+    padding-bottom: 1px;
 
     header {
         img {
